--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,14 @@
-body { background-color: #000; background: url('bg.jpg') no-repeat 0px; background-attachment:fixed; font-family: sans-serif; padding: 30px }
+body { background-color: #000; background: url('bg.jpg') no-repeat 0px; background-attachment:fixed; font-family: arial, verdana, sans-serif; padding: 30px }
 #spacer { height: 100px }
-#content { background-color: #fff; width: 600px; height: 500px; margin-left: auto; margin-right: auto; text-align: center; border-radius: 15px; -moz-border-radius: 15px; padding: 40px}
-#sendmsg { color: #8A9654; font-weight: bold; font-size: 20px}
+#content { background-color: #fff; width:600px; margin:0 auto; margin-top: 30px; text-align:center; border-radius:15px; -moz-border-radius:15px; padding:40px; opacity:0.9; border:5px solid #333; box-shadow:0px 0px 5px white; }
+#sendmsg { color: #8A9654; font-weight: bold; font-size: 36px}
 #errormsg { color: #A65F46; font-weight: bold; font-size: 20px}
 table { width: 300px; font-size: 12px; margin-left: auto; margin-right: auto; }
 table.td { width: 150px; margin-left: auto; margin-right: auto; }
-#explanation { width: 300px; padding: 20px; margin-left: auto; margin-right: auto; font-size: 16px; background-color: #FFF0A5; font-family: sans-serif; }
+#explanation { width: 400px; padding: 20px; margin:0 auto; font-size:16px; background-color:#FFF0A5; border-radius:10px; border:5px solid #FFD0AA; }
 #shorturl a { color: #D99559; font-size: 30px; }
+#shorturl a:hover { color: black; }
 #subtext { color: #a9a9a9 }
-a { color: #8A9654 }
+a { color: #8A9654; font-weight:bold; transition:0.5s color; text-decoration:none; }
+a:hover { color:black }
 .filename { color: rgb(82, 142, 177); font-family: "fixed"; }
